--- a/static/css/landing-page.css
+++ b/static/css/landing-page.css
@@ -145,6 +145,58 @@ header.masthead {
   background-color: transparent;
 }
 
+@keyframes placeHolderShimmer{
+  0%{
+    background-position: -468px 0;
+  }
+  100%{
+    background-position: 468px 0;
+  }
+}
+
+.animated-background {
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background: #f6f7f8;
+  background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+  background-size: 800px 104px;
+  height: 96px;
+  position: relative;
+}
+
+.animated-text {
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background: #f6f7f8;
+  background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+  background-size: 800px 104px;
+  position: relative;
+}
+
+.lazy-div {
+  position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    padding: 1rem;
+}
+
+.lazy-text {
+    height: 1rem;
+    margin-bottom: .625rem;
+    width: 100%;
+}
+
 
 header.masthead .overlay {
   position: absolute;
