--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
       </div>
     </section>
 
-    <section id="root">
+    <section>
 
     <!-- Masthead -->
     <section class="home-main-item mb-3">
@@ -75,7 +75,7 @@
                 <lazy-load></lazy-load>
         </div>
         <div class="row">
-          <search-result v-for="result in searchResults" :url="result.url" :image="result.image" :store="result.source" :title="result.title" :price="result.price"></search-result>
+          <search-result @clicked="setUrl" @removed="deleteElement(index)" v-for="(result,index) in searchResults" :url="result.url" :image="result.image" :store="result.source" :title="result.title" :price="result.price"></search-result>
         </div>
       </div>
     </section>
@@ -139,6 +139,22 @@
       </div>
     </footer>
 
+    <div class="modal fade" id="myModal">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content bmd-modalContent">
+
+        <div class="modal-body">
+          
+          <div class="close-button">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          </div>
+                      <iframe class="embed-responsive-item" width="100%" height="100%" :src="productUrl"></iframe>
+        </div>
+
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
   </div>
 
     <!-- Bootstrap core JavaScript -->
@@ -147,6 +163,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/static/js/main.js"></script>
+    <script src="/static/js/hammer.js"></script>
+    <script src="/static/js/vue-touch.js"></script>
 
   </body>
 
