Added Vue Event - Swipe to remove search-result

--- a/templates/index.html
+++ b/templates/index.html
@@ -164,7 +164,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/static/js/main.js"></script>
     <script src="/static/js/hammer.js"></script>
-    <script src="/static/js/vue-touch.js"></script>
+    <script src="/static/js/index.js"></script>
 
   </body>
 
