--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
               <div class="col-md-2 col-2">
               </div>
               <div class="col-md-6 col-6">
-                <input type=text class="form-control" v-model="filterbyname" placeholder="Price or Product">
+                <input type=text class="form-control" v-model="filterbyname" placeholder="Filter by Price or Product">
               </div>
             </div>
             <div v-show="loading" class="row">
