Added Data filtering with Vue

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,25 +17,34 @@
     <link href="/static/css/landing-page.css" rel="stylesheet">
   </head>
   <body>
-    <div id="root">
-      <!-- Navigation -->
-      <nav class="navbar navbar-light static-top">
-        <div class="container">
-          <a class="navbar-brand" href="#"><strong>OnlineStoreCompare</strong></a>
-          <a class="" href="#">Find it all</a>
-        </div>
-      </nav>
-      <section id="about comparing prices" class="mb-3">
-        <div class="container container-styled p-3 bg-orange">
-          <div class="row">
-            <div class="col-md-10">
-              <div class="pull-left mr-3"><img src="/static/img/price-tag.svg" width="50"></div>
-              <h6 class="text-yellow  mb-1">Find Best Prices at Online Stores.</h6>
-              <div class="pb-2 text-white">Compare prices from all major online stores in Nigeria. including Jumia, Jiji, Konga, Slot, Kara </div>
-            </div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-light static-top">
+      <div class="container">
+        <a class="navbar-brand" href="#"><strong>OnlineStoreCompare</strong></a>
+        <a class="" href="#">Find it all</a>
+      </div>
+    </nav>
+    <section id="about comparing prices" class="mb-3">
+      <div class="container container-styled p-3 bg-orange">
+        <div class="row">
+          <div class="col-md-10">
+            <div class="pull-left mr-3"><img src="/static/img/price-tag.svg" width="50"></div>
+            <h6 class="text-yellow  mb-1">Find Best Prices at Online Stores.</h6>
+            <div class="pb-2 text-white">Compare prices from all major online stores in Nigeria. including Jumia, Jiji, Konga, Slot, Kara </div>
           </div>
-        </section>
-        <!-- Masthead -->
+        </div>
+      </section>
+      <div class="card card-border-color">
+        <div class="card-body">
+          <ins class="adsbygoogle"
+          data-ad-test="on"
+          style="display:block"
+          data-ad-client="ca-pub-5156858464962584"
+          data-ad-format="auto"></ins>
+        </div>
+      </div>
+      <!-- Masthead -->
+      <div id="root">
         <section id="compare prices from online stores" class="home-main-item mb-3">
           <div class="container p-3 bg-white">
             <h5 class="mb-3">Search products</h5>
@@ -147,26 +156,35 @@
             </div>
           </div>
         </footer>
-        <div class="modal fade" id="myModal">
-          <div class="modal-dialog modal-lg">
-            <div class="modal-content bmd-modalContent">
-              <div class="modal-body">
-                
-                <div class="close-button">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                </div>
-                <iframe class="embed-responsive-item" width="100%" height="100%" :src="productUrl"></iframe>
+        
+      </div>
+      <div class="modal fade" id="myModal">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content bmd-modalContent">
+            <div class="modal-body">
+              <ins class="adsbygoogle"
+              style="display:block"
+              data-ad-test="on"
+              data-ad-client="ca-pub-5156858464962584"
+              data-ad-format="auto"></ins>
+              
+              <div class="close-button">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               </div>
-              </div><!-- /.modal-content -->
-              </div><!-- /.modal-dialog -->
-              </div><!-- /.modal -->
             </div>
+            </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
             <!-- Bootstrap core JavaScript -->
             <script src="/static/vendor/jquery/jquery.min.js"></script>
             <script src="/static/vendor/bootstrap/js/popper.min.js"></script>
             <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
             <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <script src="/static/js/main.js"></script>
             <script src="/static/js/hammer.js"></script>
             <script src="/static/js/index.js"></script>
